// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FullBleed /> by default should have the right structure 1`] = `
<FullBleed
  hasGradient={false}
  imageUrl="🐱🐱"
>
  <Segment
    className="full-bleed"
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed"
    >
      <ResponsiveImage
        alternativeText="Image Widget"
        imageNotFoundLabelText="Image not found!"
        imageTitle="Image Title"
        imageUrl="🐱🐱"
        isAvatar={false}
        isFluid={true}
        label={null}
        onLoad={[Function]}
        sources={Array []}
      >
        <picture
          className="responsive-image is-fluid"
          role="figure"
        >
          <Image
            alt="Image Widget"
            as="img"
            avatar={false}
            fluid={true}
            onLoad={[Function]}
            src="🐱🐱"
            title="Image Title"
            ui={true}
          >
            <img
              alt="Image Widget"
              className="ui fluid image"
              onLoad={[Function]}
              src="🐱🐱"
              title="Image Title"
            />
          </Image>
        </picture>
      </ResponsiveImage>
    </div>
  </Segment>
</FullBleed>
`;

exports[`<FullBleed /> if \`hasGradient\` is passed should have the right structure 1`] = `
<FullBleed
  hasGradient={true}
  imageUrl="🐱🐱"
>
  <Segment
    className="full-bleed has-gradient"
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed has-gradient"
    >
      <ResponsiveImage
        alternativeText="Image Widget"
        imageNotFoundLabelText="Image not found!"
        imageTitle="Image Title"
        imageUrl="🐱🐱"
        isAvatar={false}
        isFluid={true}
        label={null}
        onLoad={[Function]}
        sources={Array []}
      >
        <picture
          className="responsive-image is-fluid"
          role="figure"
        >
          <Image
            alt="Image Widget"
            as="img"
            avatar={false}
            fluid={true}
            onLoad={[Function]}
            src="🐱🐱"
            title="Image Title"
            ui={true}
          >
            <img
              alt="Image Widget"
              className="ui fluid image"
              onLoad={[Function]}
              src="🐱🐱"
              title="Image Title"
            />
          </Image>
        </picture>
      </ResponsiveImage>
    </div>
  </Segment>
</FullBleed>
`;

exports[`<FullBleed /> if \`props.children > 0\` should have the right structure 1`] = `
<FullBleed
  hasGradient={false}
  imageUrl="🐱🐱"
>
  <Segment
    className="full-bleed has-children"
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed has-children"
    >
      <ResponsiveImage
        alternativeText="Image Widget"
        imageNotFoundLabelText="Image not found!"
        imageTitle="Image Title"
        imageUrl="🐱🐱"
        isAvatar={false}
        isFluid={true}
        label={null}
        onLoad={[Function]}
        sources={Array []}
      >
        <picture
          className="responsive-image is-fluid"
          role="figure"
        >
          <Image
            alt="Image Widget"
            as="img"
            avatar={false}
            fluid={true}
            onLoad={[Function]}
            src="🐱🐱"
            title="Image Title"
            ui={true}
          >
            <img
              alt="Image Widget"
              className="ui fluid image"
              onLoad={[Function]}
              src="🐱🐱"
              title="Image Title"
            />
          </Image>
        </picture>
      </ResponsiveImage>
      🏛
    </div>
  </Segment>
</FullBleed>
`;
